syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.practice";
option java_outer_classname = "Practice";
option objc_class_prefix = "HLW";

package practice;

service ChannelRPC {
    rpc TestConn (ConnRequest) returns (ConnResponse) {}
}

message ConnRequest {
    string status_text = 1;
}

message ConnResponse {
    int32 status = 1;
    string message = 2;
}